tests/ui/lub-glb/old-lub-glb-hr-noteq1.noleak.stderr
error[E0308]: mismatched types
  --> $DIR/old-lub-glb-hr-noteq1.rs:14:14
   |
LL |         _ => y,
   |              ^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a, 'b> fn(&'a _, &'b _) -> &'a _`
              found fn pointer `for<'a> fn(&'a _, &'a _) -> &'a _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
